--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	<div class="events-content">
 		<ol>
 			<li class="selected" data-date="16/01/2014">
-				<h2>Horizontal Timeline</h2>
+				<h2>SmithieGoesWest</h2>
 				<em>January 16th, 2014</em>
 				<p>	
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus.
@@ -52,7 +52,7 @@
 			</li>
 
 			<li data-date="28/02/2014">
-				<h2>Event title here</h2>
+				<h2>SmithieGoesWest</h2>
 				<em>February 28th, 2014</em>
 				<p>	
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus.
