--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
 		<ol>
 			<li class="selected" data-date="16/01/2014">
 				<h2>SmithieGoesWest</h2>
-				<em>Put me in charge!... And watch me ReBuildUSAtoday! -</em></br>
+				<em>Put me in charge!... And watch me ReBuildUSAtoday! -</em>
+				
+				<p>
 					<!-- Social Button HTML -->
 				<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 					
@@ -69,8 +71,7 @@
         				<!-- Email -->
         		<a href="mailto:?subject=<ReBuildUSAtodayHPAC=We can only make America great again if we ReBuildUSAtoday! I'm committed to SupportReBuildUSAtoday! What about you? https://laurel-smith.github.io/SupportReBuildUSAtoday" target="_blank" class="btn share-btn email">
             			<i class="fa fa-envelope"></i>
-        		</a>
-				<p>
+					</a></br>
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus.</br>
 					<!-- Social Button HTML -->
 				<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
