--- a/index.html
+++ b/index.html
@@ -70,18 +70,19 @@
         				<!-- Email -->
         		<a href="mailto:?subject=<ReBuildUSAtodayHPAC=We can only make America great again if we ReBuildUSAtoday! I'm committed to SupportReBuildUSAtoday! What about you? https://laurel-smith.github.io/SupportReBuildUSAtoday" target="_blank" class="btn share-btn email">
             			<i class="fa fa-envelope"></i>
-					</a></br></p>
-					<br><p>"Our destiny as a nation should not stop at Oregon because a body of water - the Pacific is in the way. No. We have the means (physical materials, resources and laws) to push and to explore further from where Lewis and Clark stopped. Now, let's plan for the Pacific and beyond. 
-					Let's pledge ourselves to make this an open and a honest endeavor. Let's show the world we can conduct public affairs in a manner worthy of a society that is full of free people - all ages and different races."</br></p>
+					</a></pre>
+				<pre>
+					"Our destiny as a nation should not stop at Oregon because a body of water - the Pacific is in the way. No. We have the means (physical materials, resources and laws) to push and to explore further from where Lewis and Clark stopped. Now, let's plan for the Pacific and beyond. 
+					Let's pledge ourselves to make this an open and a honest endeavor. Let's show the world we can conduct public affairs in a manner worthy of a society that is full of free people - all ages and different races."</pre>
 
-					<br><p>My name is Abbey Samuel Laurel-Smith, and I plan to use data and tehnology to ReBuildUSAtoday. But who am i? Well, I am a Radical Republican, and i believe in the values of reconstruction and the benefit such an act brings to the economy, the middle class and the American family. 
-					Or let's just say, I believe and trust in the innovative ways of small businesses, the innovative spirit of the ordinary american and the endurance of the middle class.</br></p>
+					<pre>My name is Abbey Samuel Laurel-Smith, and I plan to use data and tehnology to ReBuildUSAtoday. But who am i? Well, I am a Radical Republican, and i believe in the values of reconstruction and the benefit such an act brings to the economy, the middle class and the American family. 
+					Or let's just say, I believe and trust in the innovative ways of small businesses, the innovative spirit of the ordinary american and the endurance of the middle class.</pre>
 
-					<br><p>Therefore, for the benefit of commerce, agriculture, family budgets, revenue and homeland defense from long endurance weapons of mass destruction and EMP attack, I plan to ReBuildUSAtoday by developing the Pacific (Princess Charllotte's lake) and the Gulf Coast better than we ever 
-					did the Atlantic.</br></p>
+					<pre>Therefore, for the benefit of commerce, agriculture, family budgets, revenue and homeland defense from long endurance weapons of mass destruction and EMP attack, I plan to ReBuildUSAtoday by developing the Pacific (Princess Charllotte's lake) and the Gulf Coast better than we ever 
+					did the Atlantic.</pre>
 
-					<br><p>Follow me @The46th_POTUS</br></p>
-				</p>
+					<pre>Follow me @The46th_POTUS</br></pre>
+				</pre>
 					<p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
 			</li>
 
