--- a/index.html
+++ b/index.html
@@ -76,17 +76,17 @@
 					Let's pledge ourselves to make this an open and a honest endeavor. Let's show the world we can conduct public affairs in a manner worthy of a society that is full of free people - all ages and different races."
 				</p>
 
-				<p>	
+				<hr>	
 					My name is Abbey Samuel Laurel-Smith, and I plan to use data and tehnology to ReBuildUSAtoday. But who am i? Well, I am a Radical Republican, and i believe in the values of reconstruction and the benefit such an act brings to the economy, the middle class and the American family. 
 					Or let's just say, I believe and trust in the innovative ways of small businesses, the innovative spirit of the ordinary american and the endurance of the middle class.
-				</p>
+				</hr>
 
-				<p>	
+				<hr>	
 					Therefore, for the benefit of commerce, agriculture, family budgets, revenue and homeland defense from long endurance weapons of mass destruction and EMP attack, I plan to ReBuildUSAtoday by developing the Pacific (Princess Charllotte's lake) and the Gulf Coast better than we ever 
 					did the Atlantic.
-				</p>
+				</hr>
 
-				<p>	Follow me @The46th_POTUS
+				<hr>	Follow me @The46th_POTUS
 				
 				</p>
 					<p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
@@ -129,7 +129,7 @@
 
 					Therefore, for the benefit of commerce, agriculture, family budgets, revenue and homeland defense from long endurance weapons of mass destruction and EMP attack, I plan to ReBuildUSAtoday by developing the Pacific (Princess Charllotte's lake) and the Gulf Coast better than we 
 					ever did the Atlantic.
-				<ul>
+	
 					Follow me @The46th_POTUS
 				</p>
 					<p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
