--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             			<i class="fa fa-envelope"></i>
 					</a>
 				<p>
-					<div class="container">
+					<div class="container #87cefa">
   					  <img src="/w3images/bandmember.jpg" alt="Avatar">
   					  <p>"Our destiny as a nation should not stop at Oregon because a body of water - the Pacific is in the way. No. We have the means (physical materials, resources and laws) to push and to explore further from where Lewis and Clark stopped. Now, let's plan for the Pacific and beyond. 
 					  Let's pledge ourselves to make this an open and a honest endeavor. Let's show the world we can conduct public affairs in a manner worthy of a society that is full of free people - all ages and different races."</p>
@@ -82,7 +82,7 @@
 	
 				<p>	
 					<div class="container darker">
-  					  <img src="/w3images/avatar_g2.jpg" alt="Avatar" class="right">
+  					  <img src="/w3images/avatar_g2.jpg" alt="Avatar">
   					  <p>My name is Abbey Samuel Laurel-Smith, and I plan to use data and tehnology to ReBuildUSAtoday. But who am i? Well, I am a Radical Republican, and i believe in the values of reconstruction and the benefit such an act brings to the economy, the middle class and the American family. 
 					  Or let's just say, I believe and trust in the innovative ways of small businesses, the innovative spirit of the ordinary american and the endurance of the middle class.
 					  Therefore, for the benefit of commerce, agriculture, family budgets, revenue and homeland defense from long endurance weapons of mass destruction and EMP attack, I plan to ReBuildUSAtoday by developing the Pacific (Princess Charllotte's lake) and the Gulf Coast better than we ever 
@@ -90,9 +90,8 @@
 					  <span class="title">Put me in charge! And watch me ReBuildUSAtoday!</span>
 					</div>
 				</p>
-					
+				<p>
 					Follow me @The46th_POTUS
-				
 				</p>
 					<p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
 			</li>
