--- a/index.html
+++ b/index.html
@@ -91,8 +91,9 @@
 					</div>
 					<div>
 				</p>					
-					Follow me @The46th_POTUS
+						<p style="color:#87cefa">Follow me @The46th_POTUS</p>
 				</p>
+					<p style="color:#87cefa">Put me in charge!....</p>
 					<p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
 			</li>
 
