--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
   					  <img src="/w3images/bandmember.jpg" alt=""class="right">
   					  <p>"Our destiny as a nation should not stop at Oregon because a body of water - the Pacific is in the way. No. We have the means (physical materials, resources and laws) to push and to explore further from where Lewis and Clark stopped. Now, let's plan for the Pacific and beyond. 
 					  Let's pledge ourselves to make this an open and a honest endeavor. Let's show the world we can conduct public affairs in a manner worthy of a society that is full of free people - all ages and different races."</p>
-				          <span class="title">ReBuildUSAtoday</span>
 				        </div>
+						<p style="color:#87cefa">Text here</p>
 				</p>
 					<div>
 				<p>	
@@ -87,13 +87,11 @@
 					  Or let's just say, I believe and trust in the innovative ways of small businesses, the innovative spirit of the ordinary american and the endurance of the middle class.
 					  Therefore, for the benefit of commerce, agriculture, family budgets, revenue and homeland defense from long endurance weapons of mass destruction and EMP attack, I plan to ReBuildUSAtoday by developing the Pacific (Princess Charllotte's lake) and the Gulf Coast better than we ever 
 					  did the Atlantic.</p>
-					  <span class="title">Put me in charge! And watch me ReBuildUSAtoday!</span>
 					</div>
 					<div>
 				</p>					
 						<p style="color:#87cefa">Follow me @The46th_POTUS</p>
 				</p>
-					<p style="color:#87cefa">Put me in charge!....</p>
 					<p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
 			</li>
 
