--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   					  <p>"Our destiny as a nation should not stop at Oregon because a body of water - the Pacific is in the way. No. We have the means (physical materials, resources and laws) to push and to explore further from where Lewis and Clark stopped. Now, let's plan for the Pacific and beyond. 
 					  Let's pledge ourselves to make this an open and a honest endeavor. Let's show the world we can conduct public affairs in a manner worthy of a society that is full of free people - all ages and different races."</p>
 				        </div>
-						<p style="color:#87cefa">Text here</p>
+						<p style="color:#87cefa">Follow @the46th_</p>
 				</p>
 					<div>
 				<p>	
@@ -92,7 +92,7 @@
 				</p>					
 						<p style="color:#87cefa">Follow me @The46th_POTUS</p>
 				</p>
-					<p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
+					<p style="border:1px; border-style:solid; border-color:#FF0000; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
 			</li>
 
 			<li data-date="28/02/2014">
