--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
 				<p>
 					<div class="container light">
   					  <img src="/w3images/bandmember.jpg" alt=""class="right">
-					<p style="border:1px; border-style:solid; border-color:#c5d7ed"; padding: 1em;">"Our destiny as a nation should not stop at Oregon because a body of water - the Pacific is in the way. No. We have the means (physical materials, resources and laws) to push and to explore further from where Lewis and Clark stopped. Now, let's plan for the Pacific and beyond. 
+					<p style="border:1px; border-style:solid; border-color:#9dbce1"; padding: 1em;">"Our destiny as a nation should not stop at Oregon because a body of water - the Pacific is in the way. No. We have the means (physical materials, resources and laws) to push and to explore further from where Lewis and Clark stopped. Now, let's plan for the Pacific and beyond. 
 					  Let's pledge ourselves to make this an open and a honest endeavor. Let's show the world we can conduct public affairs in a manner worthy of a society that is full of free people - all ages and different races."</p>
 				        </div>
-						<p style="color:#c5d7ed">Follow me @The46th_POTUS</p>
+						<p style="color:#9dbce1">Follow me @the46th_</p>
 				</p>
 					<div>
 				<p>	
