--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 				<h2>SmithieGoesWest</h2>
 				<em>Put me in charge!  And watch me ReBuildUSAtoday! -</em>
 				<p>
+			</div>
 					<!-- Social Button HTML -->
 				<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 					
@@ -83,14 +84,14 @@
 				<p>	
 					<div class="container darker">
   					  <img src="/w3images/bandmember.jpg" alt="">
-  					  <p>My name is Abbey Samuel Laurel-Smith, and I plan to use data and tehnology to ReBuildUSAtoday. But who am i? Well, I am a Radical Republican, and i believe in the values of reconstruction and the benefit such an act brings to the economy, the middle class and the American family. 
+  					  <p style="border:1px; border-style:solid; border-color:#9dbce1"; padding: 1em;">My name is Abbey Samuel Laurel-Smith, and I plan to use data and tehnology to ReBuildUSAtoday. But who am i? Well, I am a Radical Republican, and i believe in the values of reconstruction and the benefit such an act brings to the economy, the middle class and the American family. 
 					  Or let's just say, I believe and trust in the innovative ways of small businesses, the innovative spirit of the ordinary american and the endurance of the middle class.
 					  Therefore, for the benefit of commerce, agriculture, family budgets, revenue and homeland defense from long endurance weapons of mass destruction and EMP attack, I plan to ReBuildUSAtoday by developing the Pacific (Princess Charllotte's lake) and the Gulf Coast better than we ever 
 					  did the Atlantic.</p>
 					</div>
 					<div>
 				</p>					
-						<p style="color:#c5d7ed">Follow me @The46th_POTUS</p>
+						<p style="color:#9dbce1">Follow me @The46th_POTUS</p>
 				</p>
 					<p style="border:1px; border-style:solid; border-color:#FF0000; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
 			</li>
