--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 				</p>
 					<div>
 				<p>	
-					<div class="container darker">
+					<div class="container light">
   					  <img src="/w3images/bandmember.jpg" alt="">
   					  <p style="border:1px; border-style:solid; border-color:#FF0000"; padding: 1em;">My name is Abbey Samuel Laurel-Smith, and I plan to use data and tehnology to ReBuildUSAtoday. But who am i? Well, I am a Radical Republican, and i believe in the values of reconstruction and the benefit such an act brings to the economy, the middle class and the American family. 
 					  Or let's just say, I believe and trust in the innovative ways of small businesses, the innovative spirit of the ordinary american and the endurance of the middle class.
