--- a/index.html
+++ b/index.html
@@ -82,8 +82,11 @@
 					  I believe and trust in the innovative ways of small businesses, the innovative spirit of the ordinary american and the endurance of the middle class. Therefore, for the benefit of commerce, 
 					  agriculture, family budgets, revenue and homeland defense from long endurance weapons of mass destruction and EMP attack, I plan to ReBuildUSAtoday by developing the Pacific (Princess Charllotte's 
 					  lake) and the Gulf Coast better than we ever did the Atlantic.</p>
-				</p>					
-						<p style="color:#DCDCDC">Follow me @The46th_POTUS</p>
+				<p>
+					<p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>  
+					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p> 
+					<p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017.				
+					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p>
 				</p>
 					<p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
 			</li>
@@ -118,9 +121,9 @@
 					</a></br>
 				<p>
 					<p style="border:3px; border-style:solid; border-color:#FFFFFF; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
-					Follow me @The46th_POTUS
+					<p Follow me @The46th_POTUS</p>
 					<p style="border:3px; border-style:solid; border-color:#FFFFFF; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
-					Follow me @The46th_POTUS
+					<p Follow me @The46th_POTUS</p>
 				</p>
 					<p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
 			</li>
