--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 					   lake) and the Gulf Coast better than we ever did the Atlantic.</p>				
 					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p>
 				</p>
-					<p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
+					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
 			</li>
 
 			<li data-date="28/02/2014">
