--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 					   lake) and the Gulf Coast better than we ever did the Atlantic.</p>				
 					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p>
 				</p>
-					<p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
+					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
 			</li>
 
 			<li data-date="20/04/2014">
@@ -172,7 +172,7 @@
 					   lake) and the Gulf Coast better than we ever did the Atlantic.</p>				
 					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p>
 				</p>
-					<p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
+					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
 			</li>
 
 			<li data-date="20/05/2014">
@@ -216,7 +216,7 @@
 					   lake) and the Gulf Coast better than we ever did the Atlantic.</p>				
 					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p>
 				</p>
-					<p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
+					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
 			</li>
 
 			<li data-date="09/07/2014">
@@ -260,7 +260,7 @@
 					   lake) and the Gulf Coast better than we ever did the Atlantic.</p>				
 					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p>
 				</p>
-					<p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
+					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
 			</li>
 
 			<li data-date="30/08/2014">
@@ -304,7 +304,7 @@
 					   lake) and the Gulf Coast better than we ever did the Atlantic.</p>				
 					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p>
 				</p>
-					<p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
+					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
 			</li>
 
 			<li data-date="15/09/2014">
@@ -348,7 +348,7 @@
 					   lake) and the Gulf Coast better than we ever did the Atlantic.</p>				
 					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p>
 				</p>
-					<p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
+					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
 			</li>
 
 			<li data-date="01/11/2014">
@@ -392,7 +392,7 @@
 					   lake) and the Gulf Coast better than we ever did the Atlantic.</p>				
 					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p>
 				</p>
-					<p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
+					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
 			</li>
 
 			<li data-date="10/12/2014">
@@ -436,7 +436,7 @@
 					   lake) and the Gulf Coast better than we ever did the Atlantic.</p>				
 					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p>
 				</p>
-					<p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
+					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
 			</li>
 
 			<li data-date="19/01/2015">
@@ -480,7 +480,7 @@
 					   lake) and the Gulf Coast better than we ever did the Atlantic.</p>				
 					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p>
 				</p>
-					<p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
+					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
 			</li>
 
 			<li data-date="03/03/2015">
@@ -524,7 +524,7 @@
 					   lake) and the Gulf Coast better than we ever did the Atlantic.</p>				
 					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p>
 				</p>
-					<p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
+					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
 			</li>
 		</ol>
 	</div> <!-- .events-content -->
