--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		<ol>
 			<li class="selected" data-date="16/01/2014">
 				<h2>SmithieGoesWest</h2>
-				<p class="tagline">Put me in charge!</p><em>Put me in charge!  And watch me ReBuildUSAtoday! -</em>
+				<p class="tagline">-Put me in charge! And watch me ReBuildUSAtoday!-</p><em>Put me in charge! </em>
 				<p>
 					<!-- Social Button HTML -->
 				<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
