--- a/index.html
+++ b/index.html
@@ -75,16 +75,17 @@
 					<p style="border:5px; border-style:solid; border-color:#FFFFFF; padding: 1em;">"Our destiny as a nation should not stop at Oregon because a body of water - the Pacific is in the way. No. 
 					   We have the means (physical materials, resources and laws) to push and to explore further from where Lewis and Clark stopped. Now, let's plan for the Pacific and beyond. Let's pledge 
 					   ourselves to make this an open and a honest endeavor. Let's show the world we can conduct public affairs in a manner worthy of a society that is full of free people - all ages and 
-					   different races."</p>  
+					   different races. That's why i said, "Put me in CHARGE! And watch me ReBuildUSAtoday!""</p>  
 					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p> 
-					<p style="border:5px; border-style:solid; border-color:#FFFFFF; padding: 1em;">My name is Abbey Samuel Laurel-Smith, and I plan to use data and tehnology to ReBuildUSAtoday. But who am i? 
-					   Well, I am a Radical Republican, and i believe in the values of reconstruction and the benefit such an act brings to the economy, the middle class and the American family. Or let's just say, 
-					   I believe and trust in the innovative ways of small businesses, the innovative spirit of the ordinary american and the endurance of the middle class. Therefore, for the benefit of commerce, 
-					   agriculture, family budgets, revenue and homeland defense from long endurance weapons of mass destruction and EMP attack, I plan to ReBuildUSAtoday by developing the Pacific (Princess Charllotte's 
-					   lake) and the Gulf Coast better than we ever did the Atlantic.</p>				
+					<p style="border:5px; border-style:solid; border-color:#FFFFFF; padding: 1em;">My name is Abbey Samuel Laurel-Smith, and I plan to use data and tehnology to ReBuildUSAtoday. But then again, 
+					   who am i? Well, I am a Radical Republican and I now have my own FEC registered political party, The PILGRIMS Alliance Party of America or La Allianza De peregrinos de los Estados Unidos. I 
+					   believe in the values of reconstruction and the benefit such an act brings to the economy, the middle class and the American family. Or let's just say, I believe and trust in the innovative 
+					   ways of small businesses, the innovative spirit of the ordinary american and the endurance of the middle class. Therefore, for the benefit of commerce, agriculture, family budgets, revenue 
+					   and homeland defense from long endurance weapons of mass destruction and EMP attack, I plan to ReBuildUSAtoday by developing the Pacific (Princess Charllotte's lake) and the Gulf Coast better 
+					   than we ever did the Atlantic.</p>				
 					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p>
 				</p>
-					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
+					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in CHARGE! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literary copyright: Abbey Samuel Laurel-Smith, 2014.</p>
 			</li>
 
 			<li data-date="28/02/2014">
@@ -128,7 +129,7 @@
 					   lake) and the Gulf Coast better than we ever did the Atlantic.</p>				
 					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p>
 				</p>
-					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
+					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in CHARGE! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
 			</li>
 
 			<li data-date="20/04/2014">
@@ -172,7 +173,7 @@
 					   lake) and the Gulf Coast better than we ever did the Atlantic.</p>				
 					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p>
 				</p>
-					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
+					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in CHARGE! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
 			</li>
 
 			<li data-date="20/05/2014">
@@ -216,7 +217,7 @@
 					   lake) and the Gulf Coast better than we ever did the Atlantic.</p>				
 					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p>
 				</p>
-					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
+					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in CHARGE! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
 			</li>
 
 			<li data-date="09/07/2014">
@@ -260,7 +261,7 @@
 					   lake) and the Gulf Coast better than we ever did the Atlantic.</p>				
 					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p>
 				</p>
-					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
+					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in CHARGE! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
 			</li>
 
 			<li data-date="30/08/2014">
@@ -304,7 +305,7 @@
 					   lake) and the Gulf Coast better than we ever did the Atlantic.</p>				
 					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p>
 				</p>
-					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
+					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in CHARGE! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
 			</li>
 
 			<li data-date="15/09/2014">
@@ -348,7 +349,7 @@
 					   lake) and the Gulf Coast better than we ever did the Atlantic.</p>				
 					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p>
 				</p>
-					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
+					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in CHARGE! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
 			</li>
 
 			<li data-date="01/11/2014">
@@ -392,7 +393,7 @@
 					   lake) and the Gulf Coast better than we ever did the Atlantic.</p>				
 					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p>
 				</p>
-					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
+					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in CHARGE! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
 			</li>
 
 			<li data-date="10/12/2014">
@@ -436,7 +437,7 @@
 					   lake) and the Gulf Coast better than we ever did the Atlantic.</p>				
 					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p>
 				</p>
-					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
+					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in CHARGE! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
 			</li>
 
 			<li data-date="19/01/2015">
@@ -480,7 +481,7 @@
 					   lake) and the Gulf Coast better than we ever did the Atlantic.</p>				
 					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p>
 				</p>
-					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
+					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in CHARGE! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
 			</li>
 
 			<li data-date="03/03/2015">
@@ -524,7 +525,7 @@
 					   lake) and the Gulf Coast better than we ever did the Atlantic.</p>				
 					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p>
 				</p>
-					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in charge! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
+					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in CHARGE! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
 			</li>
 		</ol>
 	</div> <!-- .events-content -->
