--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 					<p style="border:5px; border-style:solid; border-color:#FFFFFF; padding: 1em;">"Our destiny as a nation should not stop at Oregon because a body of water - the Pacific is in the way. No. 
 					   We have the means (physical materials, resources and laws) to push and to explore further from where Lewis and Clark stopped. Now, let's plan for the Pacific and beyond. Let's pledge 
 					   ourselves to make this an open and a honest endeavor. Let's show the world we can conduct public affairs in a manner worthy of a society that is full of free people - all ages and 
-					   different races. That's why i said, "Put me in CHARGE! And watch me ReBuildUSAtoday!""</p>  
+					   different races. That's why i said, "Put me in CHARGE! And watch me ReBuildUSAtoday!"</p>  
 					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p> 
 					<p style="border:5px; border-style:solid; border-color:#FFFFFF; padding: 1em;">My name is Abbey Samuel Laurel-Smith, and I plan to use data and tehnology to ReBuildUSAtoday. But then again, 
 					   who am i? Well, I am a Radical Republican and I now have my own FEC registered political party, The PILGRIMS Alliance Party of America or La Allianza De peregrinos de los Estados Unidos. I 
