--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 					   different races. That's why i said, "Put me in CHARGE! And watch me ReBuildUSAtoday!"</p>  
 					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p> 
 					<p style="border:5px; border-style:solid; border-color:#FFFFFF; padding: 1em;">My name is Abbey Samuel Laurel-Smith, and I plan to use data and tehnology to ReBuildUSAtoday. But then again, 
-					   who am i? Well, I am a Radical Republican and I now have my own FEC registered political party, The PILGRIMS Alliance Party of America or La Allianza De peregrinos de los Estados Unidos. I 
+					   who am i? Well, I am a Radical Republican and I now have my own FEC registered political party, The PILGRIMS Alliance Party of America or La Allianza De Peregrinos de los Estados Unidos. I 
 					   believe in the values of reconstruction and the benefit such an act brings to the economy, the middle class and the American family. Or let's just say, I believe and trust in the innovative 
 					   ways of small businesses, the innovative spirit of the ordinary american and the endurance of the middle class. Therefore, for the benefit of commerce, agriculture, family budgets, revenue 
 					   and homeland defense from long endurance weapons of mass destruction and EMP attack, I plan to ReBuildUSAtoday by developing the Pacific (Princess Charllotte's lake) and the Gulf Coast better 
