--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 					   lake) and the Gulf Coast better than we ever did the Atlantic.</p>				
 					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p>
 				</p>
-					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in CHARGE! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
+					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in CHARGE! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literary copyright: Abbey Samuel Laurel-Smith, 2014.</p>
 			</li>
 
 			<li data-date="20/04/2014">
@@ -173,7 +173,7 @@
 					   lake) and the Gulf Coast better than we ever did the Atlantic.</p>				
 					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p>
 				</p>
-					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in CHARGE! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
+					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in CHARGE! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literary copyright: Abbey Samuel Laurel-Smith, 2014.</p>
 			</li>
 
 			<li data-date="20/05/2014">
@@ -217,7 +217,7 @@
 					   lake) and the Gulf Coast better than we ever did the Atlantic.</p>				
 					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p>
 				</p>
-					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in CHARGE! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
+					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in CHARGE! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literary copyright: Abbey Samuel Laurel-Smith, 2014.</p>
 			</li>
 
 			<li data-date="09/07/2014">
@@ -261,7 +261,7 @@
 					   lake) and the Gulf Coast better than we ever did the Atlantic.</p>				
 					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p>
 				</p>
-					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in CHARGE! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
+					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in CHARGE! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literary copyright: Abbey Samuel Laurel-Smith, 2014.</p>
 			</li>
 
 			<li data-date="30/08/2014">
@@ -305,7 +305,7 @@
 					   lake) and the Gulf Coast better than we ever did the Atlantic.</p>				
 					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p>
 				</p>
-					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in CHARGE! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
+					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in CHARGE! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literary copyright: Abbey Samuel Laurel-Smith, 2014.</p>
 			</li>
 
 			<li data-date="15/09/2014">
@@ -349,7 +349,7 @@
 					   lake) and the Gulf Coast better than we ever did the Atlantic.</p>				
 					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p>
 				</p>
-					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in CHARGE! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
+					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in CHARGE! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literary copyright: Abbey Samuel Laurel-Smith, 2014.</p>
 			</li>
 
 			<li data-date="01/11/2014">
@@ -393,7 +393,7 @@
 					   lake) and the Gulf Coast better than we ever did the Atlantic.</p>				
 					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p>
 				</p>
-					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in CHARGE! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
+					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in CHARGE! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literary copyright: Abbey Samuel Laurel-Smith, 2014.</p>
 			</li>
 
 			<li data-date="10/12/2014">
@@ -437,7 +437,7 @@
 					   lake) and the Gulf Coast better than we ever did the Atlantic.</p>				
 					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p>
 				</p>
-					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in CHARGE! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
+					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in CHARGE! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literary copyright: Abbey Samuel Laurel-Smith, 2014.</p>
 			</li>
 
 			<li data-date="19/01/2015">
@@ -481,7 +481,7 @@
 					   lake) and the Gulf Coast better than we ever did the Atlantic.</p>				
 					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p>
 				</p>
-					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in CHARGE! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
+					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in CHARGE! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literary copyright: Abbey Samuel Laurel-Smith, 2014.</p>
 			</li>
 
 			<li data-date="03/03/2015">
@@ -525,7 +525,7 @@
 					   lake) and the Gulf Coast better than we ever did the Atlantic.</p>				
 					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p>
 				</p>
-					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in CHARGE! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literature copyright: Abbey Samuel Laurel-Smith, 2014.</p>
+					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in CHARGE! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literary copyright: Abbey Samuel Laurel-Smith, 2014.</p>
 			</li>
 		</ol>
 	</div> <!-- .events-content -->
