--- a/index.html
+++ b/index.html
@@ -117,17 +117,25 @@
             			<i class="fa fa-envelope"></i>
 					</a>
 				<p>
-					<p style="border:5px; border-style:solid; border-color:#FFFFFF; padding: 1em;">"Our destiny as a nation should not stop at Oregon because a body of water - the Pacific is in the way. No. 
-					   We have the means (physical materials, resources and laws) to push and to explore further from where Lewis and Clark stopped. Now, let's plan for the Pacific and beyond. Let's pledge 
-					   ourselves to make this an open and a honest endeavor. Let's show the world we can conduct public affairs in a manner worthy of a society that is full of free people - all ages and 
-					   different races."</p>  
+					<p style="border:5px; border-style:solid; border-color:#FFFFFF; padding: 1em;">To revitalize the economy, I will focus on regional needs, take certain steps and implement community economic rejuvenation 
+					   policies - that are similar to those implemented for the prosperity of this nation after the civil war. Now, let's talk, "economy, the American way" The American civil war showed us how important small 
+					   businesses are to the growth of this nation. These small businesses are the back bone of many local regions. They create varieties of jobs in our local comunities. They don't have exotic tastes, so no 
+					   need to ship jobs abroad, talk less of outsourcing services. Small businesses, manufacturers and service providers could help stimulate economic recovery in areas with high unemployment rate. With this 
+					   in mind, i'd rather give tax breaks to small businesses, inovators and the middle class, than swell big corporations...</p>  
 					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p> 
-					<p style="border:5px; border-style:solid; border-color:#FFFFFF; padding: 1em;">My name is Abbey Samuel Laurel-Smith, and I plan to use data and tehnology to ReBuildUSAtoday. But who am i? 
-					   Well, I am a Radical Republican, and i believe in the values of reconstruction and the benefit such an act brings to the economy, the middle class and the American family. Or let's just say, 
-					   I believe and trust in the innovative ways of small businesses, the innovative spirit of the ordinary american and the endurance of the middle class. Therefore, for the benefit of commerce, 
-					   agriculture, family budgets, revenue and homeland defense from long endurance weapons of mass destruction and EMP attack, I plan to ReBuildUSAtoday by developing the Pacific (Princess Charllotte's 
-					   lake) and the Gulf Coast better than we ever did the Atlantic.</p>				
+					<p style="border:5px; border-style:solid; border-color:#FFFFFF; padding: 1em;">For the West Coast states - California, Washington, Oregon, Utah and Nevada, I will:
+					   treat these areas as the frontline of the future of our defense. And I will do three major things for them. First in the area of defense. Second is technology. And third is waterfarming. But let's talk 
+					   about the first and the last.
+					   Defense: Long endurance weapons, aerial/spectrum denial platforms and different types sub-surface weapons with passive anti-buoyancy capability are the biggest threat to the American homeland now. And 
+					   they are in the hands of aliies and foes in the Pacific. To counter these I propose a review of our current doctrine. Make way fro a deep defense structure by reshuffling our offensive posture. I also 
+					   propose a new military, a new mindset and a totally new doctrine. We need newly conceived weapons, new weapon platforms and new technology to face this type of challenge. All we have as at know are 
+					   Reagan-era weapons. They are good for defending Europe and the Middle East. But are they good in the Pacific, No? Are they good for the homeland, No?.</p>				
 					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p>
+					   Technology:
+					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p>
+					   Waterfarming:
+					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p>
+
 				</p>
 					<p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">This site, "Put me in CHARGE! And watch me ReBuildUSAtoday!" was paid for by ReBuildUSAtodayHPAC 2017. Literary copyright: Abbey Samuel Laurel-Smith, 2014.</p>
 			</li>
