--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
 					   propose a new military, a new mindset and a totally new doctrine. We need newly conceived weapons, new weapon platforms and new technology to face this type of challenge. All we have as at know are 
 					   Reagan-era weapons. They are good for defending Europe and the Middle East. But are they good in the Pacific, No? Are they good for the homeland, No?.</p>				
 					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p>
-					   <p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">Technology....</p>
+					   <p style="border:3px; border-style:solid; border-color:#FFFFFF; padding: 1em;">Technology....</p>
 					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p>
-					   <p style="border:3px; border-style:solid; border-color:#40bf80; padding: 1em;">WaterFarming....</p>
+					   <p style="border:3px; border-style:solid; border-color:#FFFFFF; padding: 1em;">WaterFarming....</p>
 					<p style="color:#DCDCDC">Follow me @The46th_POTUS</p>
 
 				</p>
